[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/xolonium/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/StartMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 21
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 1 )

[node name="StartMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1480.0
margin_bottom = 820.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 1178.0
margin_bottom = 740.0
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 1178.0
margin_bottom = 155.0
custom_fonts/font = SubResource( 1 )
text = "Light Speed"

[node name="MenuOptions" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 159.0
margin_right = 1178.0
margin_bottom = 740.0
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1

[node name="DificultyLabel" type="Label" parent="HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 129.0
margin_right = 1178.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 2 )
text = "Choose the dificulty:"

[node name="EasyButton" type="Button" parent="HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 198.0
margin_right = 178.0
margin_bottom = 282.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 3 )
text = "Easy"

[node name="NormalButton" type="Button" parent="HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 312.0
margin_right = 248.0
margin_bottom = 396.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 3 )
text = "Normal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoteLabel" type="Label" parent="HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 426.0
margin_right = 1178.0
margin_bottom = 452.0
custom_fonts/font = SubResource( 5 )
autowrap = true

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 1182.0
margin_right = 1360.0
margin_bottom = 740.0
alignment = 2

[node name="BackButton" type="Button" parent="HBoxContainer/VBoxContainer2"]
margin_top = 656.0
margin_right = 178.0
margin_bottom = 740.0
custom_fonts/font = SubResource( 4 )
text = "Back"

[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/MenuOptions/EasyButton" to="." method="_on_EasyButton_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/VBoxContainer/MenuOptions/EasyButton" to="." method="_on_EasyButton_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MenuOptions/EasyButton" to="." method="_on_EasyButton_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/MenuOptions/NormalButton" to="." method="_on_NormalButton_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/VBoxContainer/MenuOptions/NormalButton" to="." method="_on_NormalButton_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MenuOptions/NormalButton" to="." method="_on_NormalButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/BackButton" to="." method="_on_BackButton_pressed"]
